--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,104 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html class="no-js" lang="en-us">
 <head>
-  <title>Boilerplate</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <!-- META DATA -->
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--[if IE]><meta http-equiv="cleartype" content="on" /><![endif]-->
 
+  <!-- SEO -->
+  <title>Project Title</title>
+
+  <!-- STYLESHEETS -->
+  <link rel="stylesheet" media="screen, projection" href="<%= asset_prefix %>assets/styles/modern.css" />
+  <link rel="stylesheet" media="screen, projection" href="<%= asset_prefix %>assets/styles/legacy.css" />
+</head>
+
+<body>
+<!-- CONTENT -->
 <%= yield %>
 
+<!-- JAVASCRIPT -->
+
+<script src="<%= asset_prefix %>assets/vendor/requirejs/require.js"></script>
+<script src="<%= asset_prefix %>assets/scripts/config.js"></script>
+<script>
+  /**
+   * Global constants
+   *
+   * @class SETTINGS
+   * @static
+   */
+  window.SETTINGS = {};
+
+  /**
+   * Indicates whether we are running on a production environment
+   *
+   * @property IS_PRODUCTION
+   * @type Boolean
+   * @final
+   */
+  SETTINGS.IS_PRODUCTION = <%= Rails.env.production? %>;
+
+  /**
+   * Appended to query string for versioning of network resources (CSS,
+   * JavaScript, etc). This version number should be updated in production
+   * for every release.
+   *
+   * @property APP_VERSION
+   * @type {String}
+   * @final
+   */
+  SETTINGS.APP_VERSION = '1.0.0';
+
+  /**
+   * Set to true to allow application to output to browser console, false
+   * to silence all console output. This should be set to `false` on
+   * production.
+   *
+   * @property LOG_CONSOLE
+   * @type Boolean
+   * @final
+   */
+  SETTINGS.LOG_CONSOLE = !SETTINGS.IS_PRODUCTION;
+
+  /**
+   * Appended to query string to defeat caching of network resources (CSS,
+   * JavaScript, etc). Should be set to '' on production
+   *
+   * @property CACHE_BUSTER
+   * @type String
+   * @final
+   */
+  SETTINGS.CACHE_BUSTER = SETTINGS.IS_PRODUCTION ? '' : '&bust=' + Math.random();
+
+  /**
+   * Root path for all JavaScript files
+   *
+   * @property SCRIPT_PATH
+   * @type String
+   * @final
+   */
+  SETTINGS.SCRIPT_PATH = '<%= asset_path_prefix %>assets/scripts/';
+
+  /**
+   * Set any RequireJs configuration that is dependent on dynamic
+   * configuration variables. Note that this config data is merged into
+   * any other require.config() statements defined elsewhere.
+   */
+  require.config({
+    // Script path
+    baseUrl: SETTINGS.SCRIPT_PATH,
+
+    // Params to append to the end of each js file request
+    urlArgs: 'v=' + SETTINGS.APP_VERSION + SETTINGS.CACHE_BUSTER
+  });
+
+  /**
+   * Set route and kick off RequireJs, which begins loading of scripts
+   * starting from main.js.
+   */
+  require(['main']);
+</script>
 </body>
 </html>
